--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^7.3.0
+  flutter_bloc: ^7.2.0
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.3 
   google_fonts: ^2.1.0
@@ -22,6 +22,7 @@ dependencies:
   http: ^0.13.3
   localstorage: ^4.0.0+1
   progress_indicators: ^1.0.0
+  bloc_test: ^8.2.0
 
 dev_dependencies:
   flutter_test:
